application.yml 파일 수정 - database를 aws rds로 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,9 +10,9 @@ spring:
   # Database
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/ProjectHarpseal
-    username: ProjectHarpseal
-    password: 6800
+    url: ${postgresql_URL}
+    username: ${postgresql_USERNAME}
+    password: ${postgresql_PASSWORD}
   # jpa properties
   jpa:
     hibernate:
