--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -36,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "options": {
+    "allowedHosts": ["projectharpseal.com", ".projectharpseal.com"],
+    "proxy": "https://apiprojectharpseal.com/"
   }
 }
