--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -10,6 +10,7 @@
     "http-proxy-middleware": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -38,7 +39,10 @@
     ]
   },
   "options": {
-    "allowedHosts": ["apiprojectharpseal.com", ".apiprojectharpseal.com"],
+    "allowedHosts": [
+      "apiprojectharpseal.com",
+      ".apiprojectharpseal.com"
+    ],
     "proxy": "https://apiprojectharpseal.com"
   }
 }
