--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.25.1"
+    "@babel/eslint-parser": "^7.25.1",
+    "typescript": "^5.6.2"
   }
 }
