KEPCO 로직 수정 및 디버깅

--- a/src/main/resources/api.properties
+++ b/src/main/resources/api.properties
@@ -1,2 +1,10 @@
+##  Base URL ##
+KCA_URL=http://openapi.price.go.kr/openApiImpl/ProductPriceInfoService/
+KEPCO_URL=https://bigdata.kepco.co.kr/openapi/v1/powerUsage/
 
-ㅁㄴㅇㄹ
+## Path ##
+KCA_ProdInfo_Path=getProductInfoSvc.do
+KCA_ProdPrice_Path=getProductPriceInfoSvc.do
+KCA_StdInfo_Path=getStandardInfoSvc.do
+KCA_StoreInfo_Path=getStoreInfoSvc.do
+KEPCO_Path=houseAve.do
