--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,9 @@ dependencies {
 	implementation 'com.opencsv:opencsv:5.7.1' // OpenCSV 라이브러리
 	implementation 'org.apache.poi:poi-ooxml:5.2.3' // 최신 버전으로 변경 가능
 	implementation 'org.apache.poi:poi:5.2.3'      // 최신 버전으로 변경 가능
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 }
 
 
