--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "http-proxy-middleware": "^3.0.0",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
@@ -40,6 +44,8 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.1",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "typescript": "^4.9.5"
   }
 }
