--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,6 @@
 spring.application.name=ProjectHarpSeal
 #logging.level.io.netty=DEBUG
-
-# Hibernate SQL ??? ??? ??
-spring.jpa.show-sql=true
-
-# Hibernate? ?? SQL ?? ??? DEBUG? ?? (????? ??? ??? ??)
-logging.level.org.hibernate.SQL=DEBUG
-
-# Hibernate? SQL ??? ????? ???? ?? ??
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.show-sql=false
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.hibernate.ddl-auto=update
